--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,17 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
 
-# Fabric Properties
+# Minecraft
 minecraft_version=1.16.5
+
+# Fabric Properties
+fabric_version=0.30.3+1.16
 yarn_mappings=1.16.5+build.4
 loader_version=0.11.1
 
 # Mod Properties
-mod_version = 0.0.1
-maven_group = meteordevelopment.exampleaddon
-archives_base_name = example-addon
+mod_version = 0.1
+maven_group = meteordevelopment.addons
+archives_base_name = example
 
-# Dependencies
-# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.30.3+1.16
+
