Update stuff, rename to template, remove LICENSE

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,12 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
 
-# Minecraft
 minecraft_version=1.16.5
-
-# Fabric Properties
-fabric_version=0.30.3+1.16
-yarn_mappings=1.16.5+build.4
-loader_version=0.11.1
+yarn_mappings=1.16.5+build.9
+loader_version=0.11.3
 
 # Mod Properties
-mod_version = 0.1
+mod_version = 0.2
 maven_group = meteordevelopment.addons
-archives_base_name = example
+archives_base_name = template
 
 
