--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
 org.gradle.jvmargs=-Xmx2G
 
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.9
-loader_version=0.11.3
+# Fabric (https://fabricmc.net/versions.html)
+minecraft_version=1.17
+yarn_version=1.17+build.11
+loader_version=0.11.6
 
 # Mod Properties
-mod_version = 0.2
-maven_group = meteordevelopment.addons
-archives_base_name = template
+mod_version=0.3
+maven_group=meteordevelopment.addons
+archives_base_name=addon-template
