--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,11 @@ repositories {
 dependencies {
     // Minecraft
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_version}:v2"
+    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     // Meteor
-    modImplementation "com.github.MeteorDevelopment:meteor-client:master-SNAPSHOT"
+    modImplementation "com.github.MeteorDevelopment:meteor-client:v${project.meteor_version}"
 }
 
 processResources {
@@ -31,6 +31,9 @@ processResources {
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version
+
+        filter { line -> line.replace("@mc_version@", project.minecraft_version) }
+        filter { line -> line.replace("@meteor_version@", project.meteor_version) }
     }
 }
 
