--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,13 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric (https://fabricmc.net/versions.html)
 minecraft_version=1.17.1
-yarn_version=1.17.1+build.40
+yarn_mappings=1.17.1+build.1
 loader_version=0.11.6
 
 # Mod Properties
 mod_version=0.3
 maven_group=meteordevelopment.addons
 archives_base_name=addon-template
+
+# Meteor
+meteor_version=0.4.5
