--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -1,22 +1,27 @@
-name: devbuild
-on:
-  - push
+name: Publish Development Build
+
+on: push
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@latest
+        
       - name: Setup JDK 16
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@latest
         with:
           java-version: 16
           distribution: adopt
+          
       - name: Build
         run: |
           chmod +x ./gradlew
           ./gradlew build
-      - name: Create Dev Build release
+          
+      - name: Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
