--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,17 +14,20 @@ jobs:
     
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@latest
+        
       - name: Setup JDK 16
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@latest
         with:
           java-version: 16
           distribution: adopt
+          
       - name: Build
         run: |
           chmod +x ./gradlew
           ./gradlew build
-      - name: Upload build artifacts
+          
+      - name: Upload artifacts
         uses: actions/upload-artifact@v2.2.4
         with:
           name: build-artifacts
