--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -7,20 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout
-        uses: actions/checkout@latest
-        
-      - name: Setup JDK 16
-        uses: actions/setup-java@latest
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
         with:
           java-version: 16
           distribution: adopt
-          
       - name: Build
-        run: |
-          chmod +x ./gradlew
-          ./gradlew build
-          
+        run: ./gradlew build
       - name: Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
