--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,5 +1,4 @@
 name: Build Pull Request
-
 on: pull_request
 
 jobs:
@@ -11,22 +10,16 @@ jobs:
           - windows-latest
           - ubuntu-latest
     runs-on: '${{ matrix.os }}'
-    
     steps:
-      - name: Checkout
-        uses: actions/checkout@latest
-        
-      - name: Setup JDK 16
-        uses: actions/setup-java@latest
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
         with:
           java-version: 16
           distribution: adopt
-          
       - name: Build
         run: |
           chmod +x ./gradlew
           ./gradlew build
-          
       - name: Upload artifacts
         uses: actions/upload-artifact@v2.2.4
         with:
