--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,13 +3,7 @@ on: pull_request
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os:
-          - macos-latest
-          - windows-latest
-          - ubuntu-latest
-    runs-on: '${{ matrix.os }}'
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -17,9 +11,7 @@ jobs:
           java-version: 16
           distribution: adopt
       - name: Build
-        run: |
-          chmod +x ./gradlew
-          ./gradlew build
+        run: ./gradlew build
       - name: Upload artifacts
         uses: actions/upload-artifact@v2.2.4
         with:
