--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.8-SNAPSHOT'
+    id 'fabric-loom' version '0.9-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -11,13 +11,13 @@ group = project.maven_group
 
 repositories {
     maven {
-        name = "meteor-maven"
+        name = "meteor-maven-snapshots"
         url = "https://maven.meteordev.org/snapshots"
     }
 }
 
 dependencies {
-    // Minecraft
+    // Fabric
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
@@ -31,9 +31,7 @@ processResources {
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version
-
         filter { line -> line.replace("@mc_version@", project.minecraft_version) }
-        filter { line -> line.replace("@meteor_version@", project.meteor_version) }
     }
 }
 
