--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,15 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric (https://fabricmc.net/versions.html)
 minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.1
-loader_version=0.11.6
+yarn_mappings=1.17.1+build.62
+loader_version=0.12.3
 
 # Mod Properties
 mod_version=0.3
 maven_group=meteordevelopment.addons
 archives_base_name=addon-template
 
-# Meteor
+# Dependency Versions
+
+# Meteor (https://maven.meteordev.org/)
 meteor_version=SNAPSHOT
