--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric (https://fabricmc.net/versions.html)
-minecraft_version=1.18
-yarn_mappings=1.18+build.1
-loader_version=0.12.8
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.14
+loader_version=0.12.12
 
 # Mod Properties
-mod_version=0.3
-maven_group=meteordevelopment.addons
+mod_version=0.1
+maven_group=dummy.package
 archives_base_name=addon-template
 
 # Dependency Versions
