Fixed Meteor dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,4 @@ archives_base_name=addon-template
 # Dependency Versions
 
 # Meteor (https://maven.meteordev.org/)
-meteor_version=SNAPSHOT
+meteor_version=0.5.0-SNAPSHOT
