updated to the latest meteor snapshot

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 org.gradle.jvmargs=-Xmx2G
 
-# Fabric (https://fabricmc.net/versions.html)
+# Fabric Properties (https://fabricmc.net/versions.html)
 minecraft_version=1.19
-yarn_mappings=1.19+build.1
-loader_version=0.14.7
+yarn_mappings=1.19+build.4
+loader_version=0.14.8
 
 # Mod Properties
-mod_version=0.1
-maven_group=dummy.package
+mod_version=0.1.0
+maven_group=com.example
 archives_base_name=addon-template
 
-# Dependency Versions
+# Dependencies
 
 # Meteor (https://maven.meteordev.org/)
 meteor_version=0.5.0-SNAPSHOT
