--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx2G
 
-# Fabric Properties (https://fabricmc.net/versions.html)
+# Fabric Properties (https://fabricmc.net/develop)
 minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.1
+yarn_mappings=1.19.4+build.2
 loader_version=0.14.19
 
 # Mod Properties
@@ -12,5 +12,5 @@ archives_base_name=addon-template
 
 # Dependencies
 
-# Meteor (https://maven.meteordev.org/)
+# Meteor (https://maven.meteordev.org)
 meteor_version=0.5.3-SNAPSHOT
