--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,19 +1,25 @@
 name: Build Pull Request
-on: pull_request
+
+on: [ pull_request ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: adopt
+          distribution: 'temurin'
+          java-version: '17'
+
+      - run: chmod +x gradlew
+
       - name: Build
         run: ./gradlew build
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2.2.4
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
         with:
-          name: build-artifacts
-          path: build/libs
+          name: pull-request-build
+          path: build/libs/
