--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ loader_version=0.14.19
 
 # Mod Properties
 mod_version=0.1.0
-maven_group=com.example
+maven_group=de.damcraft
 archives_base_name=server-seeker
 
 # Dependencies
