--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Publish Development Build
 on: push
- 
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,7 +11,7 @@ jobs:
           java-version: 17
           distribution: adopt
       - name: Build
-        run: ./gradlew build
+        run: ./gradlew build -Pgithub_sha=${{ github.sha }}
       - name: Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
