--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,8 @@ jobs:
         run: |
           echo "virus_total_link=$(echo ${{ steps.virustotal_step.outputs.analysis }} | cut -d ',' -f 1 | cut -d 'jar=' -f 2)" >> $GITHUB_OUTPUT
           echo "short_sha=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
+          echo "file=$(ls build/libs/*.jar | head -n 1)" >> $GITHUB_OUTPUT
+          echo "file_name=$(ls build/libs/*.jar | head -n 1 | xargs -n 1 basename)" >> $GITHUB_OUTPUT
 
       - name: Build Changelog
         id: github_release
@@ -56,7 +58,7 @@ jobs:
         with:
           tag_name: ${{ steps.pretty_result.outputs.short_sha }}
           prerelease: true
-          release_name: Dev Build
+          release_name: Dev Build ${{ steps.pretty_result.outputs.short_sha }}
           draft: false
           body: |
             ${{ steps.github_release.outputs.changelog }}
@@ -65,6 +67,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          asset_path: ./build/libs/*.jar
+          asset_path: ${{ steps.pretty_result.outputs.file }}
           asset_content_type: application/java-archive
           upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_name: ${{ steps.pretty_result.outputs.file_name }}
