--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
           echo "short_sha=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
           echo "file=$(ls build/libs/*.jar | head -n 1)" >> $GITHUB_OUTPUT
           echo "file_name=$(ls build/libs/*.jar | head -n 1 | xargs -n 1 basename)" >> $GITHUB_OUTPUT
-          echo "version=$(ls build/libs/*.jar | head -n 1 | xargs -n 1 basename | cut -d '-' -f 2 | cut -d '.' -f 1-3)" >> $GITHUB_OUTPUT
+          echo "version=$(ls build/libs/*.jar | head -n 1 | xargs -n 1 basename | cut -d '-' -f 3 | cut -d '.' -f 1-3)" >> $GITHUB_OUTPUT
 
       - name: Build Changelog
         id: github_release
@@ -45,7 +45,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: Dev Build (Based on ${{ steps.pretty_result.outputs.version }})}}
+          name: Dev Build (Based on ${{ steps.pretty_result.outputs.version }})
           tag_name: latest
           prerelease: true
           draft: false
