--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "fabric-loom" version "1.4-SNAPSHOT"
+    id "fabric-loom" version "1.5.7"
 }
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
